--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
 		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"aark-react-modalify": "^1.2.2",
+		"better-auth": "^1.4.17",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.563.0",
 		"next": "16.1.4",
+		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"tailwind-merge": "^3.4.0"
