--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.2.8",
+		"@tanstack/react-form": "^1.28.0",
+		"@tanstack/zod-form-adapter": "^0.42.1",
 		"aark-react-modalify": "^1.2.2",
 		"better-auth": "^1.4.17",
 		"class-variance-authority": "^0.7.1",
@@ -26,7 +28,8 @@
 		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
-		"tailwind-merge": "^3.4.0"
+		"tailwind-merge": "^3.4.0",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
